--- a/React/组件开发/心得.md
+++ b/React/组件开发/心得.md
@@ -72,3 +72,44 @@ class Divider extends React.Component<DividerProps, any> {
 #### hooks
 
 ![](http://with.muyunyun.cn/764623d18eeb45724da661a0b6fbb679.jpg)
+
+### 组件异步的设计
+
+* 方式一: 使用方通过返回 Promise 来告知组件已完成异步操作;
+
+```js
+const demo = () => {
+  return new Promise((resolve) => {
+    setTimeout(() => {
+      console.log('模拟异步接口')
+      resolve()
+    }, 2000)
+  })
+}
+```
+
+* 方式二: 使用方通过调用 `done()` 来告知组件已完成异步操作;(组件内完成对 Promise 的封装)
+
+```js
+const demo = (done) => {
+  setTimeout(() => {
+    console.log('模拟异步接口')
+    done()
+  }, 2000)
+}
+```
+
+从组件设计的角度来说, 方式一对组件内部的维护更加友好; 从使用者的角度来说, 方式二的使用更为便捷, 但是重构的成本会变大。
+
+如下是针对方式二的组件的封装方式。
+
+```js
+// 此处 fn 为外面传入的 demo 函数
+if (fn.length === 1) {
+  new Promise((resolve: any) => {
+    fn(resolve)
+  }).then(() => {
+    ...
+  })
+}
+```
