docs: 移动端场景知识

--- a/BasicSkill/基础篇/移动端场景知识.md
+++ b/BasicSkill/基础篇/移动端场景知识.md
@@ -69,3 +69,28 @@ box-shadow: 0px -1px 0px 0px rgba(245, 245, 245, 1);
 ```
 
 但是缺陷是画下划线不便, 需要配合 `position: relative` 以及 `z-index` 来调整层级。
+
+### 滑动穿透解决方案
+
+- [滑动穿透解决方案](https://github.com/MuYunyun/blog/blob/master/React/%E7%BB%84%E4%BB%B6%E5%BC%80%E5%8F%91/modal.md#%E6%BB%91%E5%8A%A8%E7%A9%BF%E9%80%8F%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88)
+
+### 移动端适配
+
+#### 分辨率
+
+* PPI(Pixel Per Inch): 每英寸包括的像素数
+* DPI(Dot Per Inch): 每英寸包括的点数
+
+#### 设备独立像素
+
+* DP 或者 DIP(Device Independent Pixels): 设备独立像素
+
+#### 设备像素比
+
+* 物理像素与设备独立像素的比值, 浏览器上获取设备像素比的方法 `window.devicePixelRatio`;
+
+-------- 分割线 ---------
+
+阅读到移动端开发
+
+* [关于移动端适配，你必须要知道的](https://juejin.im/post/5cddf289f265da038f77696c#heading-3)
