--- a/React/流畅性.md
+++ b/React/流畅性.md
@@ -9,7 +9,7 @@
 
 ![](http://with.muyunyun.cn/23b109b73c8296e2c0d9178d214f33f0.jpg-400)
 
-当前市面上频率在 60 HZ 以上。
+当前市面上的设备频率在 60 HZ 以上。
 
 ### 主动交互
 
@@ -49,7 +49,7 @@ Load —— 1000ms
 ```js
 function App() {
   useEffect(() => {
-    setTimeout(_ => {
+    setTimeout(() => {
       const start = performance.now()
       while (performance.now() - start < 1000) { }
       console.log('done!')
@@ -229,3 +229,9 @@ for (var i = 0; i < 1000; i++) {
   transform: translateZ(0);
 }
 ```
+
+### 相关链接
+
+* [csstriggers](https://csstriggers.com/) 里添加了各个 CSS 属性对重排、重绘、组合的影响。
+* [时间切片](https://github.com/berwin/Blog/issues/38): 后续 demo 可以整合一下。
+* [React Fiber 架构](https://zhuanlan.zhihu.com/p/37095662): "如何调度时间才能保证流畅"此小节可以参阅
