docs: 自定义主题色

--- a/React/组件开发/主题色替换方案.md
+++ b/React/组件开发/主题色替换方案.md
@@ -60,3 +60,81 @@
 ### 参阅资料
 
 * [聊一聊前端换肤](https://juejin.im/post/5ca41617f265da3092006155)
+
+### 自适应颜色
+
+`colorPalette` 函数。
+
+RGB 可以方便的进行计算机存储和读取, 但对人进行颜色判断十分不友好, 因此有了 HSB/HSV。
+
+* RGB: 面向硬件
+* HSB: 面向用户
+
+HSB(Hue, Saturation, Brightness) 分别表示色调(色相), 饱和度, 亮度。
+
+* [HSB 模型](https://baike.baidu.com/item/HSB模型)
+* [HSV 模型](https://baike.baidu.com/item/HSV/547122): 有关 H、S 的解释这个更清晰
+* [antd 色彩](https://ant.design/docs/spec/colors-cn)
+
+### version1 实现
+
+```scss
+$theme-color: #1199ee !default;
+
+/* mix white */
+@function tint($theme-color, $percent) {
+  @return mix(#fff, $theme-color, $percent);
+}
+
+/* mix black */
+@function shade($theme-color, $percentage) {
+  @return mix(black, $theme-color, $percentage);
+}
+
+/* There are ten color in on theme, from left to right, they are
+*  tint($theme-color, 50%), tint($theme-color, 40%), tint($theme-color, 30%), tint($theme-color, 20%), tint($theme-color, 10%),
+*  $theme-color, shade($theme-color, 10%), shade($theme-color, 20%), shade($theme-color, 30%), shade($theme-color, 40%)
+,*/
+@function colorPallete1($theme-color) {
+  @return tint($theme-color, 50%);
+}
+
+@function colorPallete2($theme-color) {
+  @return tint($theme-color, 40%);
+}
+
+@function colorPallete3($theme-color) {
+  @return tint($theme-color, 30%);
+}
+
+/* 悬停态 */
+@function colorPallete4($theme-color) {
+  @return tint($theme-color, 20%);
+}
+
+@function colorPallete5($theme-color) {
+  @return tint($theme-color, 10%);
+}
+
+/* 主色 */
+@function colorPallete6($theme-color) {
+  @return $theme-color;
+}
+
+@function colorPallete7($theme-color) {
+  @return shade($theme-color, 10%);
+}
+
+/* 点击态 */
+@function colorPallete8($theme-color) {
+  @return shade($theme-color, 20%);
+}
+
+@function colorPallete9($theme-color) {
+  @return shade($theme-color, 30%);
+}
+
+@function colorPallete10($theme-color) {
+  @return shade($theme-color, 40%);
+}
+```
