--- a/BasicSkill/基础篇/移动端场景知识.md
+++ b/BasicSkill/基础篇/移动端场景知识.md
@@ -83,14 +83,15 @@ box-shadow: 0px -1px 0px 0px rgba(245, 245, 245, 1);
 
 #### 设备独立像素
 
-* DP 或者 DIP(Device Independent Pixels): 设备独立像素
+* DP 或者 DIP(Device Independent Pixels): 设备独立像素, 用于安卓系统;
+* PT(Point): 用于 IOS 系统;
 
 #### 设备像素比
 
+* DPR(device pixel ratio)
+
 * 物理像素与设备独立像素的比值, 浏览器上获取设备像素比的方法 `window.devicePixelRatio`;
 
--------- 分割线 ---------
+### reference link
 
-阅读到移动端开发
-
-* [关于移动端适配，你必须要知道的](https://juejin.im/post/5cddf289f265da038f77696c#heading-3)
+* [关于移动端适配，你必须要知道的](https://juejin.im/post/5cddf289f265da038f77696c#heading-3): 此篇文章总结得蛮好的。
