--- a/React/流畅性.md
+++ b/React/流畅性.md
@@ -63,7 +63,13 @@ function App() {
 
 ![](http://with.muyunyun.cn/574ac0a2b41a78fdb00f2db3d250de37.jpg-400)
 
-一般超过 50 ms 认为是 `long task(长任务)`, `long task` 会阻塞 `main thread` 的运行, 如下是两种解决方案。
+超过 50 ms 认为是 `long task(长任务)`, `long task` 会阻塞 `main thread` 的运行。
+
+在 [chrome 74](https://developers.google.com/web/updates/2019/03/devtools#longtasks), 对 long task 进行了标明:
+
+![](http://with.muyunyun.cn/26e2861027babde1248178a0ad2252ed.jpg-400)
+
+如下是两种解决方案。
 
 #### Web Worker
 
