--- a/React/组件开发/主题色替换方案.md
+++ b/React/组件开发/主题色替换方案.md
@@ -57,10 +57,6 @@
 
 如果业务方使用 scss: 如果 css modules hash 不能去掉, 有一个 scss + css variable 的方案可以代替 sass-loader 方案(成本是要写相应的插件); 如果 css modules hash 能去掉, 可以使用之前提到的 taro 上的第一种方案, 在 app 进入的地方引入主题色进行覆盖 scss Variable;
 
-### 参阅资料
-
-* [聊一聊前端换肤](https://juejin.im/post/5ca41617f265da3092006155)
-
 ### 自适应颜色
 
 `colorPalette` 函数。
@@ -138,3 +134,26 @@ $theme-color: #1199ee !default;
   @return shade($theme-color, 40%);
 }
 ```
+
+### Sass 踩坑
+
+`sass-loader` 的 options 配置要参阅 [sass 文档](https://sass-lang.com/documentation/js-api)
+
+> I think itl's necessary to prompt what features can be used in the options.😄 And the usage of the custom function is found in [this issue](https://github.com/webpack-contrib/sass-loader/issues/210) instead of doc.
+
+* [sass 中使用 JavaScript 的口子](https://sass-lang.com/documentation/js-api#new-types-color-red-green-blue-alpha-1)
+* [tinyColor](https://github.com/bgrins/TinyColor)
+
+
+### 设计师的角度
+
+#### 关于悬浮态
+
+> 悬浮态颜色变浅: hover 相当于 button 被你的鼠标吸起来了，所以上升后离光源更近，所以变白了。（类似前面某位同学提到的：距离越近越亮
+
+> 悬浮态颜色变深: 特别是有的商家/客服显示器很差，Hover 上去底色变亮了字是白的，可能有些情况影响识别度
+
+### 参阅资料
+
+* [聊一聊前端换肤](https://juejin.im/post/5ca41617f265da3092006155)
+* [Ant Design 色板生成算法演进之路](https://zhuanlan.zhihu.com/p/32422584)
