docs: mini programe

--- a/BasicSkill/效率篇/重构改善既有代码的设计.md
+++ b/BasicSkill/效率篇/重构改善既有代码的设计.md
@@ -11,3 +11,19 @@
 
 1. 帮助快速找到 bug
 2. 提高编程速度
+
+### 重构手段
+
+#### 提炼函数(extract Function)
+
+背景: 一整段函数不利于阅读;
+方式: 按语义进行重构, 将不利于阅读的函数其拆分成小份, 并给它们取上恰当的名字以便于阅读;
+
+#### 内联函数(inline Function)
+
+背景: 函数拆得太细, 和提炼函数相反的一种重构手段;
+方式: 可以逐行替换;
+
+### 提炼变量
+
+### 内联变量
