--- a/React/组件开发/主题色替换方案.md
+++ b/React/组件开发/主题色替换方案.md
@@ -1,15 +1,17 @@
-1. https://blog.csdn.net/m0_37792354/article/details/82012278: 这个方案可以实现, 利用动态切换样式表, 每种主题需要一份样式, 可以实现但后期维护成本高;(较次方案)
-2. CSS Variables 的方案, 基于项目本身是 scss 而且 CSS Variables 的兼容性问题暂时不考虑此种方案(浏览器支持度如下);
+### 方案调研
+
+1. https://blog.csdn.net/m0_37792354/article/details/82012278: 这个方案可以实现, 利用动态切换样式表, 每种主题需要一份样式, 可以实现但后期维护成本高(不考虑);
+2. CSS Variables 的方案, 基于项目本身是 scss 不考虑此种方案, 但是其浏览器支持度还是可以的;
 
 ![](http://with.muyunyun.cn/fe11d88b92efa1249d58fe13d5c737dd.jpg)
 
-3. [饿了么换肤方案](https://github.com/ElemeFE/element/issues/3054#issuecomment-282527907), 打包方案其实还是绕不开 sass、sass-loader;
-浏览器换皮肤思路:
+3. 入口文件引入自定义变量(参照 antd/饿了么/taro 的方案); 因为组内组件使用了 css module, 所以该方案不能适用我们的业务场景;
+4. [浏览器端涂色板换色方案](https://github.com/ElemeFE/element/issues/3054#issuecomment-282527907);
 
-换肤代码压缩方案(参照饿了么/taro 的方案)
-1. 入口文件引入自定义变量
-2. https://github.com/ElementUI/theme-chalk, scss 通用样式整理
-3. 按需加载(可能需要考虑)
+所以最终方案分为两步:
+
+* 编译阶段在 sass-loader 中注入颜色生成算法;
+* 浏览器调色板可以使用饿了么的正则替换思路;
 
 ### antd
 
@@ -40,18 +42,7 @@
 
 2. [theme-chalk](https://github.com/ElementUI/theme-chalk)
 
------------ 分割线 ------------
-
-基于 css modules 必须使用的点，我想了想只有本地打好包给业务方使用方案了, 但是比较笨重(相当于是要打包出多份不同的 css 样式文件在项目中了, 然后业务方每要一种主题就要新增维护一份打包文件) 。
-
-对于目标是 scss 的用户, 有一种 sass + css variable 的方案(猜想)来代替 sass-loader
-
 ### scss 中使用 antd 来自定义主题
-
-### 是否能解决?
-
-* 方案一: 确保两次 css-module 生成完全一样的 hash?
-* 方案二: 走后门(研究下 beast-core 的后门)
 
 如果业务方使用 less/css: 基于 css modules 的 hash 不能覆盖的点，~~一个方案是本地打好包给业务方使用方案了(兜底方案)，但是比较笨重(相当于是要打包出多份不同的 css 样式文件在项目中了, 然后业务方每要一种主题就要新增维护一份打包文件)~~; `觉得应该将 hash 去掉(或者等下看下是否能走后门), 这样子就能采用下载自定义主题进行覆盖的方案了`;
 
@@ -143,7 +134,6 @@ $theme-color: #1199ee !default;
 
 * [sass 中使用 JavaScript 的口子](https://sass-lang.com/documentation/js-api#new-types-color-red-green-blue-alpha-1)
 * [tinyColor](https://github.com/bgrins/TinyColor)
-
 
 ### 设计师的角度
 
