docs: adjust docs

--- a/React/流畅性.md
+++ b/React/流畅性.md
@@ -1,7 +1,5 @@
 ### 流畅性
 
-本篇是对 FDCon2019 上《让你的网页更丝滑》课题的复盘文。该课题也是博主感兴趣的领域, 后续对该文的细节进行进一步补充。
-
 * 被动交互: animation
 * 主动交互: 鼠标、键盘
 
@@ -15,15 +13,7 @@
 
 跑如下界面 https://code.h5jun.com/pojob
 
-结合如下代码块, 可以看到 100ms 以下的点击是顺畅的, 而超过 100ms 的点击就会有卡顿现象。
-
-```js
-var observer = new PerformanceObserver(function(list) {
-  var perfEntries = list.getEntries()
-  console.log(perfEntries)
-});
-observer.observe({entryTypes: ["longtask"]});
-```
+通过观察上述 demo, 可以看到 100ms 以下的点击是顺畅的, 而超过 100ms 的点击就会有卡顿现象。
 
 #### 让用户感觉到流畅
 
@@ -115,6 +105,12 @@ const workerCode = () => {
 
 下面是另外一种使页面流畅的方法 —— `Time Slicing`(时间分片)。
 
+##### Time Slicing 的意义
+
+如果某个任务超过 50ms 没有执行完, 为了避免阻塞浏览器主线程的执行, 该任务应该让出执行的控制权, 让浏览器处理完其它任务后再来执行该任务。
+
+##### Time Slicing
+
 观察 Chrome 的 Performance, 火焰图如下,
 
 ![](http://with.muyunyun.cn/8cbc0ea884095aa25a79bd9d474ff2e5.jpg)
@@ -144,12 +140,50 @@ timeSlicing(function* () {
 })
 ```
 
-该函数虽然代码量不长, 但却不易理解。前置知识 [Generator](https://github.com/MuYunyun/blog/blob/master/BasicSkill/readES6/Generator.md)
+前置知识 [Generator](https://github.com/MuYunyun/blog/blob/master/BasicSkill/readES6/Generator.md)
 
 下面对该函数进行分析:
 
 1. 往时间分片函数 `timeSlicing` 中传入 `generator` 函数;
 2. 函数的执行顺序 —— ①、②、③、① (此时有个竞赛的关系, 如果 `performance.now() - start < 1000` 则继续 ②、③, 如果 `performance.now() - start >= 1000` 则跳出循环执行 ④、⑤);
+
+如何说:
+
+1. timeSlicing 传入 generator 函数;
+2. 我们知道 generator 函数提供了 yiled 这个暂停口子;
+3. 通过这个口子控制权可以转交到 timeSlicing 内部;
+4. 通过 setTimeout 将 long tasks 切分到多个事件队列中执行;
+
+##### 避免把任务分解的过于零碎
+
+使用 `Time Slising` 会让任务的完成时间变长, 但为了让用户体验流畅, 这种取舍还是有必要的。这个也是在 [schedule](https://github.com/MuYunyun/blog/blob/master/BasicSkill/React/schedule.md) 中提到的`目标对象更快完成渲染`与`及时响应优先级更高任务`的矛盾。
+
+假设某个任务执行时间为 `100ms`, 假设被分割的任务间隔是 `4ms`, 分割成 2 个 `50ms` 的任务和分割成 100 个 `1ms` 的任务分别耗时。
+
+```
+(50 + 4) * 2 = 108ms
+
+(1 + 4) * 100 = 500ms
+```
+
+针对上述函数作如下调整:
+
+```js
+function timeSlicing(gen) {
+  if (typeof gen === 'function') gen = gen()
+  if (!gen || typeof gen.next !== 'function') return
+
+  (function next() {
+    const init = performance.now()
+    let res = gen.next()
+    while (!res.done && performance.now() - init < 25) { // 这里相当于是一个控制执行多少的阀门。
+      res = gen.next()
+    }
+    if (res.done) return
+    setTimeout(next)
+  })()
+}
+```
 
 #### conclusion
 
@@ -239,5 +273,5 @@ for (var i = 0; i < 1000; i++) {
 ### 相关链接
 
 * [csstriggers](https://csstriggers.com/) 里添加了各个 CSS 属性对重排、重绘、组合的影响。
-* [时间切片](https://github.com/berwin/Blog/issues/38): 后续 demo 可以整合一下。
+* [时间切片](https://github.com/berwin/Blog/issues/38)
 * [React Fiber 架构](https://zhuanlan.zhihu.com/p/37095662): "如何调度时间才能保证流畅"此小节可以参阅
