--- a/React/源码贡献之路.md
+++ b/React/源码贡献之路.md
@@ -48,13 +48,23 @@
 
 > 最为重要的是前 4 块内容。
 
-### 设计原则
+### React 中的设计原则
 
 * 组合。组件是可以互相组合的函数。
 * 抽象。`React` 只会抽象一些确实对使用者有帮助的特性(比如 `State、LifeCycle`)，而不会抽象一些使用者自己可以实现的功能。`React 团队` 会在 [Big Picture](https://github.com/facebook/react/issues?q=is:open+is:issue+label:%22Type:+Big+Picture%22) 中和大家商榷这些抽象。
 
+### React 项目运行
+
+### React 16 之后的打包方式
+
+* 16 之前是每个文件单独打包在 lib 文件夹下, [15.6.2](https://unpkg.com/react@15.6.2/lib/)
+* 16 版本只暴露两个包在 umd 文件夹下, [16.0.0](https://unpkg.com/react@16.0.0/umd/)
+
+> 打包方式有这个转变的原因是因为之前打成多个包的形式对于打包器来说是低效的(会多出大量胶水代码)。
+
 ### 相关资源
 
-- [x] [Level Up Your Reverse Engineering Skills](https://blog.angularindepth.com/level-up-your-reverse-engineering-skills-8f910ae10630): 这篇文章中介绍了逆向工程思维是什么 —— 去探究新知识点，并为之兴奋;
-- [x] [Practical application of reverse-engineering guidelines and principles](https://medium.com/react-in-depth/practical-application-of-reverse-engineering-guidelines-and-principles-784c004bb657): 结合 React 介绍逆向工程思维;
-- [x] [How to Contribute](https://reactjs.org/docs/how-to-contribute.html)
+* [Level Up Your Reverse Engineering Skills](https://blog.angularindepth.com/level-up-your-reverse-engineering-skills-8f910ae10630): 这篇文章中介绍了逆向工程思维是什么 —— 去探究新知识点，并为之兴奋;
+* [Practical application of reverse-engineering guidelines and principles](https://medium.com/react-in-depth/practical-application-of-reverse-engineering-guidelines-and-principles-784c004bb657): 结合 React 介绍逆向工程思维;
+* [How to Contribute](https://reactjs.org/docs/how-to-contribute.html)
+* [Repository Infrastructure](https://react.docschina.org/blog/2017/12/15/improving-the-repository-infrastructure.html)
