docs: common bugs when use derived state

--- a/React/组件开发/移动端组件测试指北.md
+++ b/React/组件开发/移动端组件测试指北.md
@@ -12,7 +12,7 @@
 
 ### 模拟真机测试
 
-首先需注意的是`低版本的手机是`不支持 ES6 的, 所以打包到线上环境的代码应该是编译成 ES5 的。
+首先需注意的是`低版本的手机是`不支持 ES6 的, 所以打包到线上环境的代码应该是编译成 ES5。
 
 ![](http://with.muyunyun.cn/fcec13352f1a210d2f9718281ffca685.jpg)
 
