--- a/BasicSkill/基础篇/移动端场景知识.md
+++ b/BasicSkill/基础篇/移动端场景知识.md
@@ -95,3 +95,12 @@ box-shadow: 0px -1px 0px 0px rgba(245, 245, 245, 1);
 ### reference link
 
 * [关于移动端适配，你必须要知道的](https://juejin.im/post/5cddf289f265da038f77696c#heading-3): 此篇文章总结得蛮好的。
+
+### IOS8 兼容情况
+
+定位问题
+
+`Symbol`、`Map` 在 ios8 中是不支持的
+
+![](http://with.muyunyun.cn/2da80724739178534ac4bb03459654d5.jpg)
+
