docs: hooks Performance Optimizations

--- a/React/组件开发/组件开发实践.md
+++ b/React/组件开发/组件开发实践.md
@@ -113,3 +113,10 @@ if (fn.length === 1) {
   })
 }
 ```
+
+### 组件样式覆盖的问题
+
+背景: 业务 a 使用了组件包 b 以及工具包 c, 其中 c 也依赖了旧版本的 b。此时业务 a 中会有两个组件包 b 的样式, 此时会碰到修改了组件包 b 的样式, 而样式被老版本的 b 覆盖的情况。这个时候有什么解决方法呢?
+
+* 方案一: 打包给样式带上版本号;
+* 方案二: 让工具包 c 把组件包 b 放在 `pureDependencies` 中, 业务方的 `dependency` 统一维护组件包 b;
