docs: Hooks 设计模式

--- a/React/从0到1实现React/8.HOC探索.md
+++ b/React/从0到1实现React/8.HOC探索.md
@@ -104,7 +104,7 @@ class B extends Component {
 
 继承反转的核心是: 传入 HOC 的组件会作为返回类的父类来使用。然后在 render 中调用 `super.render()` 来调用父类的 render 方法。
 
-> 在 [《ES6 继承与 ES5 继承的差异》](https://github.com/MuYunyun/blog/blob/master/BasicSkill/readES6/继承.md#作为对象调用的-super)中我们提到了作为对象使用的 super 指向父类的实例。
+> 在 [ES6 继承与 ES5 继承的差异](https://github.com/MuYunyun/blog/blob/master/BasicSkill/readES6/继承.md#作为对象调用的-super)中提到了作为对象使用的 super 指向父类的实例。
 
 ```js
 function iiHOC(WrappedComponent) {
