--- a/BasicSkill/基础篇/移动端场景知识.md
+++ b/BasicSkill/基础篇/移动端场景知识.md
@@ -98,9 +98,11 @@ box-shadow: 0px -1px 0px 0px rgba(245, 245, 245, 1);
 
 ### IOS8 兼容情况
 
-定位问题
-
 `Symbol`、`Map` 在 ios8 中是不支持的
 
 ![](http://with.muyunyun.cn/2da80724739178534ac4bb03459654d5.jpg)
 
+后续陆续兼容以下属性
+
+* 数组/字符串的 `includes` 方法, ios9 开始支持
+* document.body.append:
