docs: React_Hooks设计模式

--- a/BasicSkill/编程范式/函数式编程入门.md
+++ b/BasicSkill/编程范式/函数式编程入门.md
@@ -255,9 +255,9 @@ Maybe.of = value => new Maybe(value)
 `Either 函子` 是为了对应 `if...else...` 的语法, 即`非左即右`。因此可以将之拆分为 `Left` 和 `Right` 两个函子, 它们的用法如下:
 
 ```js
-Left.of(1).map(r => r + 1)  // Left {value: 1}
+var left = Left.of(1).map(r => r + 1)  // Left {value: 1}
 
-Right.of(1).map(r => r + 1) // Right {value: 2}
+var right = Right.of(1).map(r => r + 1) // Right {value: 2}
 ```
 
 `Left 函子`实现代码如下:
@@ -296,7 +296,7 @@ Right.of = value => new Right(value)
 
 ```js
 var Either = function(f, g, functor) {
-  switch(functor.constructor) {
+  switch(functor.constructor.name) {
     case 'Left':
       return f(functor.value)
     case 'Right':
@@ -311,7 +311,7 @@ var Either = function(f, g, functor) {
 
 ```js
 Either((v) => console.log('left', v), (v) => console.log('def', v), left)   // left 1
-Either((v) => console.log('rigth', v), (v) => console.log('def', v), rigth) // rigth 2
+Either((v) => console.log('def', v), (v) => console.log('rigth', v), rigth) // rigth 2
 ```
 
 #### Monad 函子
