--- a/React/测试/测试.md
+++ b/React/测试/测试.md
@@ -67,14 +67,61 @@ yarn add prettier -D
 "validate": "npm run lint && npm run prettier -- --list-different"
 ```
 
-* hawsky: 内置大量可以配合 git 命令执行的钩子
-* lint-staged: 把范围缩小为操作更改的文件
+* `hawsky`: 内置大量可以配合 git 命令执行的钩子
+* `lint-staged`: 把范围缩小为操作更改的文件
 
-### mock
+### mock 测试
 
-这一章中介绍了遇到诸如 `Math.random()` 的情形需要进行 `mock` 测试。
+#### mock 请求后端接口数据
 
-* 思路一: 使用装饰者模式进行 mock;
-* 思路二: 可以使用 `jest.spyOn()` 封装的 api 来简化使用;
+当测试需要请求后端接口数据的 UI 组件(比如图片上传组件), 为了防止接口不稳定等影响到测试用例通过, 通常需要对请求后端接口数据进行 mock。
 
-此外, 该章节对 es6 的模块也进行 mock。后续如果有这方面任务可以重新观看。
+> 当需要测试接口返回的真实数据时可以对其进行集成测试。
+
+```js
+jest.spyOn(global, 'fetch').mockImplementation(() => {
+  Promise.resolve({
+    json: () => Promise.resolve(mockData)
+  })
+})
+```
+
+#### mock 模块/组件
+
+如果存在对当前组件的测试影响不大的第三方模块, 可以将相关模块/组件进行 mock, 从而可以提高测试的效率。
+
+```js
+jest.mock('someComponent', () => {
+  return (props) => {
+    return <span>mock Component</span>
+  }
+})
+```
+
+#### mock 时间类 api
+
+如果测试用例中遇到 `setTimeout(fn, 5000)` 真的等上 5s 后才执行 fn 测试效率是非常低效的, 因此可以使用 jest 提供的 `jest.useFakeTimers()` 来 mock 与时间有关的 api。
+
+```js
+jest.useFakeTimers();
+
+// move ahead in time by 100ms
+act(() => {
+  jest.advanceTimersByTime(100);
+});
+```
+
+### act
+
+`act` 确保其函数里跟的单元方法(比如 rendering、用户事件、数据获取)在执行步骤 `make assertions` 之前已经全部执行完。
+
+```js
+act(() => {
+  // render components
+});
+// make assertions
+```
+
+### 相关链接
+
+* [Testing](https://reactjs.org/docs/testing-recipes.html)
