docs: adjust dependencies

--- a/BasicSkill/番外篇/编译器.md
+++ b/BasicSkill/番外篇/编译器.md
@@ -12,4 +12,4 @@
 
 > [Compilers and Interpreters](https://medium.com/hackernoon/compilers-and-interpreters-3e354a2e41cf)
 
-- [ ][Lexical Analysis](https://medium.com/hackernoon/lexical-analysis-861b8bfe4cb0)
+- [ ][Lexical Analysis](https://medium.com/hackernoon/lexical-analysis-861b8bfe4cb0): 阅读到 The FSM in code
