--- a/BasicSkill/番外篇/编译器.md
+++ b/BasicSkill/番外篇/编译器.md
@@ -12,4 +12,4 @@
 
 > [Compilers and Interpreters](https://medium.com/hackernoon/compilers-and-interpreters-3e354a2e41cf)
 
-- [ ][Lexical Analysis](https://medium.com/hackernoon/lexical-analysis-861b8bfe4cb0): 阅读到 The FSM in code
+- [ ][Lexical Analysis](https://medium.com/hackernoon/lexical-analysis-861b8bfe4cb0): 当前阅读到 Putting it all together, 后续如果要写词法解析器的需求可以结合这篇文章进行实践。
