--- a/BasicSkill/效率篇/重构改善既有代码的设计.md
+++ b/BasicSkill/效率篇/重构改善既有代码的设计.md
@@ -14,16 +14,36 @@
 
 ### 重构手段
 
-#### 提炼函数(extract Function)
+#### 提炼函数(Extract Function)
 
 背景: 一整段函数不利于阅读;
 方式: 按语义进行重构, 将不利于阅读的函数其拆分成小份, 并给它们取上恰当的名字以便于阅读;
 
-#### 内联函数(inline Function)
+#### 内联函数(Inline Function)
 
 背景: 函数拆得太细, 和提炼函数相反的一种重构手段;
 方式: 可以逐行替换;
 
-### 提炼变量
+#### 函数重命名
 
-### 内联变量
+当希望修改的函数名存在大量使用时, 可以采用渐进式的做法(旧代码调用旧函数, 旧函数调用新函数)对函数重命名:
+
+```js
+function circum(radius) {
+  return 2 * Math.PI * radius
+}
+```
+
+```js
+function circum(radius) {
+  return circumference(radius)
+}
+
+function circumference(radius) {
+  return 2 * Math.PI * radius
+}
+```
+
+> 如何给一个 function 起好名字: 先给 function 写一段注释, 再把该注释压缩为函数的名字。
+
+阅读到  引入参数对象
