--- a/BasicSkill/效率篇/重构改善既有代码的设计.md
+++ b/BasicSkill/效率篇/重构改善既有代码的设计.md
@@ -46,4 +46,26 @@ function circumference(radius) {
 
 > 如何给一个 function 起好名字: 先给 function 写一段注释, 再把该注释压缩为函数的名字。
 
-阅读到  引入参数对象
+#### 统一访问原则
+
+```js
+class Test {
+  a() {
+    return 'a'
+  }
+
+  get b() {
+    return 'b'
+  }
+}
+
+var test = new Test()
+
+test.a() // 'a'
+test.b   // 'b'
+```
+
+推崇 `get` 的写法, 用户调用该类的时候无需关系是字段还是推演计算的值。
+
+当前阅读到: 函数组合成变换。
+
