docs: reading note

--- a/BasicSkill/css/css小书/字体排印.md
+++ b/BasicSkill/css/css小书/字体排印.md
@@ -25,6 +25,13 @@
   * `rem`: 相对 `html` 中的 `font-size` 进行转换(如果根元素的 font-size 小于 12px 则以 12px 来计算);
   * `em`: 相对父元素(或者自己层级)的 `font-size` 进行转换; font-size: 1em 等价于 font-size: 100%;
 
+`px` 与 `vw` 单位间的转换:
+
+```js
+1vw = document.documentElement.clientWidth(px) / 100
+(100/document.documentElement.clientWidth)vw = 1px
+```
+
 #### rem 的使用
 
 通常将 1rem 设置为 100px, (经过测试 10px/1px 也是可以的)
