docs: write daily

--- a/BasicSkill/css/css小书/过渡与动画.md
+++ b/BasicSkill/css/css小书/过渡与动画.md
@@ -1,6 +1,7 @@
 ### 两个核心的 api
 
 * 过渡 `transition`
+  * transition: color `2s` 100ms, 注意 duration 应该位于 name 后面的最前面,
 * 动画 `animation`
   * 调用动画: `animation:name` 要与 @keyframes 连用;
   * 设置动画播放时间: `animation-duration: 2s`   完成从 0% 到 100% 一次动画所需时间;
