--- a/BasicSkill/css/css小书/字体排印.md
+++ b/BasicSkill/css/css小书/字体排印.md
@@ -61,7 +61,7 @@
 
 ```css
 html {
-  font-size: calc(100vw / 3.75) /* 此时 1 rem 相当于是 100px */
+  font-size: calc(100vw / 3.75) /* 表示在 1 dpr 屏上, 此时 1 rem 相当于是 100px */
 }
 ```
 
