docs: write daily

--- a/BasicSkill/基础篇/事件.md
+++ b/BasicSkill/基础篇/事件.md
@@ -17,19 +17,20 @@
 
 #### 区分 target 和 currentTarget
 
+* `currentTarget` 可以用于确定是`具体元素`上触发的事件;
 * `target` 用于事件委托;
-* `currentTarget` 可以用于确定是哪个元素上触发的事件;
 
 具体差异可以看以下 `demo`, 当点击 `你好` 时, 控制台输出两个 `true`; 当点击 `muyunyun` 时, 控制台输出一个 `true` 和一个 `false`。
 
 ```html
 <body>
-	<p id="test">你好<span>muyunyun</span></p>
+	<p id="test">你好, <span>muyunyun</span></p>
 	<script>
 		const content = document.getElementById('test')
 		content.addEventListener('click', function(e) {
-			console.log(this === e.currentTarget)
-			console.log(this === e.target)
+			console.log('currentTarget', e.currentTarget, 'target', e.target)
+			console.log(this === e.currentTarget) // true
+			console.log(this === e.target)        // false
 		})
 	</script>
 </body>
