--- a/BasicSkill/css/css小书/用户体验.md
+++ b/BasicSkill/css/css小书/用户体验.md
@@ -1,8 +1,16 @@
+### 选用合适的鼠标光标
+
 * 选用合适的鼠标光标: `cursor` 的 `not-allowed` 和 `none` 使用比较常见
+
+### 扩大可选区域大小
 
 * [扩大可选区域大小](https://codepen.io/MuYunyun/pen/YgNxBL): 使用伪元素
 
+### 自定义复选框
+
 * [自定义复选框](https://codepen.io/MuYunyun/pen/jJyYyJ): 见 [CheckBox 组件](https://github.com/MuYunyun/blog/blob/master/React/%E7%BB%84%E4%BB%B6%E5%BC%80%E5%8F%91/CheckBox.md) 开发
+
+### 遮罩层
 
 * 遮罩层
 
@@ -24,4 +32,12 @@
 }
 ```
 
+### 通过模糊来弱化背景
+
 * [通过模糊来弱化背景](https://codepen.io/MuYunyun/pen/qvRGvJ)
+
+### 通过 point-events: none 来禁用触发事件
+
+场景: ImagePicker 组件点击图片禁止其在 app 中弹出底部图片;
+
+`point-events: none` 类似 button 的 disabled 属性, 但是其能涵盖到其它任意属性。
