docs: 组件开发实战

--- a/BasicSkill/css/css小书/过渡与动画.md
+++ b/BasicSkill/css/css小书/过渡与动画.md
@@ -2,10 +2,11 @@
 
 * 过渡 `transition`
   * transition: color `2s` 100ms, 注意 duration 应该位于 name 后面的最前面,
+  * `transition-timing-function`: 同 `animation-timing-function`
 * 动画 `animation`
   * 调用动画: `animation:name` 要与 @keyframes 连用;
   * 设置动画播放时间: `animation-duration: 2s`   完成从 0% 到 100% 一次动画所需时间;
-  * 设置动画播放方式: `animation-timing-function`。`step()` 逐帧效果; 此外还有 `linear`、`ease` 等线性效果, 也可以使用 `cubic-bezier`;
+  * 设置动画播放方式: `animation-timing-function`。`step()` 逐帧效果; 此外还有 `linear`、`ease` 等线性效果, 也可以使用 `cubic-bezier`; 记忆方法: 可将 ease 理解成 slow, slow in 就是减速, slow out 就是加速;
   * 设置动画开始播放的时间: `animation-delay`;
   * 设置动画播放次数: `animation-iteration-count`:infinate(无限次);
   * 设置动画播放方向: `animation-direction`:normal(默认)、alternate (偶数次反方向播放);
