docs: transitions && animations

--- a/BasicSkill/css/css小书/过渡与动画.md
+++ b/BasicSkill/css/css小书/过渡与动画.md
@@ -1,12 +1,59 @@
-### 两个核心的 api
+### transition
 
-* 过渡 `transition`
-  * transition: color `2s` 100ms, 注意 duration 应该位于 name 后面的最前面,
-  * `transition-timing-function`: 同 `animation-timing-function`
+描述一个属性由一个状态过渡到另外一个状态;
+
+```css
+.trantion-thing {
+  transition: color 2s 100ms;
+}
+```
+
+* 次数: 执行一次;
+* 粒度: 可以对多个属性生效;
+* 兼容: 即时动画不生效也不影响动作的终始状态;
+
+```scss
+.transtion-thing {
+  transition:
+    $props
+    $duration
+    $timing-function (optional)
+    $transition-delay (optional)
+}
+```
+
+### animation
+
+相比 `transition`, animation 比 transition 多了个执行次数的属性;
+
+```css
+.animated-thing {
+  animation: black-to-white 1s linear 1;
+}
+
+@keyframes black-to-white {
+  0% { background: #000; }
+  100% { background: #fff; }
+}
+```
+
+注意 animation 最后的一个数字 1, 其表示执行次数, 如果不传该值, 默认为 1。来看下 animation 的几个属性
+
+```scss
+.animated-thing {
+  animation:
+    $name                       (相比 transition 独有)
+    $duration
+    $timing-function (optional)
+    $animation-delay (optional)
+    $iteration-count (optional) (相比 transition 独有)
+}
+```
+
 * 动画 `animation`
   * 调用动画: `animation:name` 要与 @keyframes 连用;
   * 设置动画播放时间: `animation-duration: 2s`   完成从 0% 到 100% 一次动画所需时间;
-  * 设置动画播放方式: `animation-timing-function`。`step()` 逐帧效果; 此外还有 `linear`、`ease` 等线性效果, 也可以使用 `cubic-bezier`; 记忆方法: 可将 ease 理解成 slow, slow in 就是减速, slow out 就是加速;
+  * 设置动画播放方式: `animation-timing-function`。`step()` 逐帧效果; 此外还有 `linear`、`ease` 等线性效果, 也可以使用 `cubic-bezier`; (记忆方法: 可将 ease 理解成 slow, slow in 就是减速, slow out 就是加速;)
   * 设置动画开始播放的时间: `animation-delay`;
   * 设置动画播放次数: `animation-iteration-count`:infinate(无限次);
   * 设置动画播放方向: `animation-direction`:normal(默认)、alternate (偶数次反方向播放);
