docs: transition && animation

--- a/BasicSkill/css/css小书/过渡与动画.md
+++ b/BasicSkill/css/css小书/过渡与动画.md
@@ -1,4 +1,6 @@
-### transition
+本文介绍和动画相关的两个属性。
+
+### transition(过渡)
 
 描述一个属性由一个状态过渡到另外一个状态;
 
@@ -22,7 +24,7 @@
 }
 ```
 
-### animation
+### animation(动画)
 
 相比 `transition`, animation 比 transition 多了个执行次数的属性;
 
@@ -59,6 +61,8 @@
   * 设置动画播放方向: `animation-direction`:normal(默认)、alternate (偶数次反方向播放);
   * 设置动画的播放状态: `animation-play-state`:running(默认)、paused(暂停效果);
   * 设置动画时间外属性: `animation-fill-mode`:none/forwards/backwords/both;
+
+[行走的猫](https://codepen.io/MuYunyun/pen/ZEzxBYb)
 
 ### 一些案例
 
