docs: 时间复杂度

--- a/BasicSkill/css/css小书/过渡与动画.md
+++ b/BasicSkill/css/css小书/过渡与动画.md
@@ -59,10 +59,18 @@
   * 设置动画开始播放的时间: `animation-delay`;
   * 设置动画播放次数: `animation-iteration-count`:infinate(无限次);
   * 设置动画播放方向: `animation-direction`:normal(默认)、alternate (偶数次反方向播放);
-  * 设置动画的播放状态: `animation-play-state`:running(默认)、paused(暂停效果);
+  * 设置动画的播放状态: `animation-play-state`:running(默认)、paused(暂停效果); 借由该属性可以完成鼠标移动移出时的暂停、播放效果;
   * 设置动画时间外属性: `animation-fill-mode`:none/forwards/backwords/both;
 
 [行走的猫](https://codepen.io/MuYunyun/pen/ZEzxBYb)
+
+### when to use Transition or Animation
+
+现阶段理解: `Animation` 的可控粒度比 `Transition` 更为细致, transition 可以实现的效果 animation 都能实现。然后有以下几种动效必须使用 animation。
+
+1. 需重复执行的动画;
+2. 需要改变方向的动画;
+3. 需要暂停/继续执行的动画;
 
 ### 一些案例
 
