docs: 时间复杂度

--- a/BasicSkill/algorithm/算法复杂度.md
+++ b/BasicSkill/algorithm/算法复杂度.md
@@ -104,3 +104,72 @@ function binarysearch(arr, target) {
 题目: 现在有一个 1~1000 区间中的正整数, 需要你猜下这个数字是几, 你只能问一个问题: 大了还是小了？问需要猜几次才能猜对？
 
 答: 根据二分查找的时间复杂度为 logN, 所以题目可以转化为求 log1000 的值, 2^10 = 1024, 所以最多猜 10 次就能猜对;
+
+### 数据规模
+
+以 JavaScript 这门语言为例, 书写如下函数
+
+```js
+function main() {
+ for (let i = 1; i <= 10; i++) {
+   let n = Math.pow(10, i)
+   console.time('start')
+   let sum = 0
+   for (let x = 0; x < n; x++) {
+     sum += x
+   }
+   console.log(`10^${i}`)
+   console.timeEnd('start')
+ }
+}
+```
+
+运行结果为:
+
+```
+10^1
+  start: 0.14892578125ms
+10^2
+  start: 0.071044921875ms
+10^3
+  start: 0.074951171875ms
+10^4
+  start: 0.232177734375ms
+10^5
+  start: 4.281982421875ms
+10^6
+  start: 0.97509765625ms
+10^7
+  start: 8.960205078125ms
+10^8
+  start: 90.760986328125ms
+10^9
+  start: 887.587890625ms
+10^10
+  start: 13403.979248046875ms
+```
+
+可以得出如下结论:
+
+使用 JavaScript 如果想让其在 1 s 内完成任务, 数据规模的要求如下:
+
+* O(n^2) 算法可以处理 10^4 级别的数据;
+* O(n) 算法可以处理 10^8 / 10^9 级别的数据;
+* O(nlogn) 算法可以处理 10^7 数据的级别;
+
+### 测试自己算法的复杂度
+
+思路: 将数据规模乘 2, 观察对应时间的增长关系。
+
+```js
+function testComplexity(fn) {
+  for (let i = 10, i < 15, i++) {
+    const total = Math.pow(2, i)
+    const mockArr = new Array(total)
+    console.time('test')
+    /* fn 为算法函数, 这里仅仅作为 demo 演示 */
+    fn(mockArr)
+    console.end('test')
+  }
+}
+```
