--- a/BasicSkill/algorithm/算法复杂度.md
+++ b/BasicSkill/algorithm/算法复杂度.md
@@ -220,3 +220,7 @@ function f(n) {
 等比数列前 n 项和公式:
 
 ![](http://with.muyunyun.cn/0a2db22818ecc056aa95e6ab75c8c903.jpg)
+
+排列组合公式:
+
+![](http://with.muyunyun.cn/468350f2ebca84bb44fc2108dc43efc0.jpg-400)
