docs: 补充 render props 不适合转化为 hooks 的场景

--- a/React/从0到1实现React/16.RenderProps.md
+++ b/React/从0到1实现React/16.RenderProps.md
@@ -5,8 +5,9 @@
 
 ### demo
 
+在如下例子中, 组件 `PassState` 即为承载公用逻辑的载体。组件 `App` 和 `UseState` 为使用方。
+
 ```js
-// 这个组件即封装的行为
 class PassState extends Component {
   constructor() {
     super()
@@ -15,9 +16,7 @@ class PassState extends Component {
 
   render() {
     return (
-      <div>
-        {this.props.render(this.state)}
-      </div>
+      <>{this.props.render(this.state)}</>
     )
   }
 }
@@ -25,21 +24,86 @@ class PassState extends Component {
 class UseState extends Component {
   render() {
     const { state } = this.props
-    return (<div>
-      {state.name}
-    </div>)
+    return <>{state.name}</>
   }
 }
 
 class App extends Component {
   render() {
     return (
-      <PassState render={(state) => (
-        <UseState state={state} />
-      )} />
+      <PassState
+        render={(state) => (
+          <UseState state={state} />
+        )}
+      />
     )
   }
 }
 ```
 
-> 个人觉得使用 HOC 能完成一样的效果。
+这是官方摘取的 render Props 例子, 只要将 render 进行替换成 children, 可以发现日常使用它的情形就很寻常了。
+
+```js
+class PassState extends Component {
+  constructor() {
+    super()
+    this.state = { name: 'muyy' }
+  }
+
+  render() {
+    return (
+      <>{this.props.children(this.state)}</>
+    )
+  }
+}
+
+class UseState extends Component {
+  render() {
+    const { state } = this.props
+    return <>{state.name}</>
+  }
+}
+
+class App extends Component {
+  render() {
+    return (
+      <PassState>
+        {(state) => (
+          <UseState state={state} />
+        )}
+      </PassState>
+    )
+  }
+}
+```
+
+比如 beast-mobile 中 Matrix 组件就是这种形式。
+
+### render props 是否都适合转化为 Hooks
+
+```js
+<Matrix dataSources={dataSources}>
+  {({ src, index }) => {
+    return (
+      <div
+        style={{
+          padding: 10,
+          background: '#ebebeb',
+          borderRadius: 4,
+          fontSize: '12px',
+          color: '#666'
+        }}
+      >
+        <div style={{ fontSize: '12px' }}> name: {src.name}</div>
+        <div style={{ fontSize: '12px' }}> age: {src.age}</div>
+        <div style={{ fontSize: '12px' }}> address: {src.address}</div>
+        <div style={{ fontSize: '12px' }}> index: {index}</div>
+      </div>
+    )
+  }}
+</Matrix>
+```
+
+![](http://with.muyunyun.cn/e99997d480a89b1c5f244d19bd67404a.jpg-400)
+
+Matrix 组件用于在项目中自动调整行内布局, 该组件中 render props 的参数是和当前排列数有关, 与`排列数相关`的 render props 没有很好的办法转化为 Hooks, 因此 Render Props 还是有用武之地的。
