--- a/React/Component_Design/站点.md
+++ b/React/Component_Design/站点.md
@@ -1,8 +1,6 @@
-来梳理下权限系统的一些隐藏知识点:
-
 ### 点击按钮实现复制文字
 
-本质是 `document.execCommand()` api 的使用, 看如下 demo:
+本质是 `document.execCommand()` api 的使用, 见如下 demo:
 
 ```html
 <body>
