--- a/React/相关技术栈/富文本编辑器.md
+++ b/React/相关技术栈/富文本编辑器.md
@@ -6,6 +6,13 @@
 
 > 学习: 也许我不会得到他的一些人性化帮助，但也不会被他提前做的假设限制住!
 
+#### L0
+
+1. 给元素上加上 `contenteditable` 属性
+2. 给选中元素执行 `document.execCommand()`
+
+> 另外一种方法是内嵌 iframe, 并将其 designmode 属性设置为 true。(有跨域问题, 日后填坑)
+
 ### link
 
 * [编辑器初体验](https://zhuanlan.zhihu.com/p/90931631)
