docs: update controled component

--- a/React/Component_Design/重新认识受控与非受控组件.md
+++ b/React/Component_Design/重新认识受控与非受控组件.md
@@ -98,7 +98,7 @@ function Demo() {
 
 ### 反模式 —— 以非受控组件的使用方式调用受控组件
 
-首先何谓反模式? 笔者将其总结为`增大隐性 bug 出现概率的模式`, 该模式是`最佳实践的对立经验`。如若使用了反模式就不得不花更多的精力去避免潜在 bug。官网对反模式也有很好的[概括总结](https://reactjs.org/blog/2018/06/07/you-probably-dont-need-derived-state.html#common-bugs-when-using-derived-state)。
+首先何谓反模式(可以看文末的案例)? 笔者将其总结为`增大隐性 bug 出现概率的模式`, 该模式是`最佳实践的对立经验`。如若使用了反模式就不得不花更多的精力去避免潜在 bug。官网对反模式也有很好的[概括总结](https://reactjs.org/blog/2018/06/07/you-probably-dont-need-derived-state.html#common-bugs-when-using-derived-state)。
 
 缘何上文提到以非受控组件的使用方式去调用受控组件是一种反模式? 观察 Input 组件的第一行代码, 其将 defaultValue 赋值给 value, 这种`将 props 赋值给 state` 的赋值行为在一定程度上会增加某些隐性 bug 的出现概率。
 
@@ -137,3 +137,63 @@ function App() {
 
 1. 方法一: [使用完全受控组件](https://reactjs.org/blog/2018/06/07/you-probably-dont-need-derived-state.html#recommendation-fully-controlled-component)(更为推荐)
 2. 方法二: [使用完全非受控组件 + key](https://reactjs.org/blog/2018/06/07/you-probably-dont-need-derived-state.html#recommendation-fully-uncontrolled-component-with-a-key)
+
+### 反模式案例
+
+* 使用过 `getDerivedStateFromProps` 么? 了解它的反模式么? 如何避免?
+
+来看下使用 Derived 会导致的常见 bug:
+
+#### 反模式一: 无条件复制 props 到 state
+
+案例: 在开发 `Picker 组件`的时候, 如下图浮层内的数据源有外部传进的 props 属性以及浮层内进行滑动的 state。
+
+![](http://with.muyunyun.cn/7614ba8c5be96ee769b8a68112848700.jpg)
+
+如果这样子写大家看看是否有问题
+
+```js
+class Picker extends Component {
+  state = {
+    data: this.props.data
+  }
+
+  getDerivedStateFromProps(props, state) {
+    if (JSON.stringify(props.data) !== JSON.stringify(state.data)) {
+      return {
+        data: props.data
+      }
+    }
+    return null
+  }
+  ...
+}
+```
+
+这样子写代码当在浮层上进行滑动时, state 的变化并不会生效, 这是为什么呢, 官网上截图如下
+
+![](http://with.muyunyun.cn/1d13387bf1d927c36cf3d1a0feaf3134.jpg)
+
+此时的 state 变化使 Picker 父组件重新 render 后会造成 `getDerivedStateFromProps` 的调用, 导致 JSON.stringify(props.data)、JSON.stringify(state.data) 间一直会不相等, 所以返回的一直是 props。
+
+#### 反模式二: 当 props 改变的时候执行重置 state
+
+```js
+class Picker extends Component {
+  state = {
+    data: this.props.data
+  }
+
+  getDerivedStateFromProps(props, state) {
+    if (JSON.stringify(props.data) !== JSON.stringify(this.props.data)) {
+      return {
+        data: props.data
+      }
+    }
+    return null
+  }
+  ...
+}
+```
+
+这样子比第一种情况好, 大多数情况是没问题的。但是有时候会出现 `JSON.stringify(props.data)`、`JSON.stringify(this.props.data)` 相等的情况, 这种情况下这样使用就会失效了。
