docs: composition_principle

--- a/BasicSkill/composition_principle/计算机组成原理.md
+++ b/BasicSkill/composition_principle/计算机组成原理.md
@@ -30,4 +30,31 @@
 
 ## 计算机的层次与编程语言
 
-2-5 2:06
+* 程序翻译
+  * 常见语言: C/Object-C/Golang;
+  * 经过编译器将高级语言转化生成为计算机实际执行的语言;
+* 程序解析
+  * 常见语言: JavaScript/Python/Php;
+  * 经过解释器(低级语言写的程序)转换为实际执行的语言;
+
+关于编译器和解释器目前不是特别清楚,后续有时间进行调研;
+
+## 计算机的计算单位
+
+容量单位
+
+![](http://with.muyunyun.cn/5cb5ecfcdb8dc250e1c981268d0b990d.jpg)
+
+问题
+
+* 为什么网上买的移动硬盘 500 G, 格式化之后只有 465 G 了?
+
+答: 因为硬盘生产商一般用 10^3 来便于沟通交流。
+
+可以进行如下换算得出:
+
+```js
+500 * (1024^3) / (1000^3) ≈ 465
+```
+
+当前看到 06: 05
