--- a/BasicSkill/composition_principle/计算机组成原理.md
+++ b/BasicSkill/composition_principle/计算机组成原理.md
@@ -37,15 +37,13 @@
   * 常见语言: JavaScript/Python/Php;
   * 经过解释器(低级语言写的程序)转换为实际执行的语言;
 
-关于编译器和解释器目前不是特别清楚,后续有时间进行调研;
+以 C 语言和 JavaScript 语言为例, C 语言要编写完整, 然后使用编译器编译成一个二进制文件才可以执行, 在编译的过程会把整个程序进行彻底的翻译和优化, 再输出平台可以直接运行的二进制文件。而 JavaScript 是在浏览器 V8 引擎解释执行的, 写好直接就可以运行了, 没有经过编译阶段, 直接是把 JavaScript 代码一句一句解释执行的。
 
 ## 计算机的计算单位
 
 容量单位
 
 ![](http://with.muyunyun.cn/5cb5ecfcdb8dc250e1c981268d0b990d.jpg)
-
-问题
 
 * 为什么网上买的移动硬盘 500 G, 格式化之后只有 465 G 了?
 
@@ -57,4 +55,14 @@
 500 * (1024^3) / (1000^3) ≈ 465
 ```
 
-当前看到 06: 05
+速度单位
+
+* 为什么电信拉的 100M 光纤, 测试峰值速度只有 12M 每秒。
+
+因为网络常用单位是 Mbps
+
+```
+100M/s === 100Mbit/s === (100/8)B/s
+```
+
+Read To: 2-8、2-9
