--- a/React/Component_Design/组件开发实践.md
+++ b/React/Component_Design/组件开发实践.md
@@ -131,6 +131,12 @@ if (fn.length === 1) {
 * beast-mobile 语言包支持、为后续站点切换双语环境做准备;
 * beast-mobile 中、英文文章简版输出, 调研专栏环境社区的创建(Medium、Twitter、知乎、Github、StackOverflow、SegmentFault);
 
+### 组件通用 API 设计
+
+* onDisabled: (record: T) => boolean
+  * ListView、Checkbox 组件公用;
+  * 场景: 提供给业务更加充分的控制权
+
 ### link
 
-[The 10 Component Commandments](https://dev.to/selbekk/the-10-component-commandments-2a7f): 组件开发方法总结, 读下来感觉不错;
+* [The 10 Component Commandments](https://dev.to/selbekk/the-10-component-commandments-2a7f): 组件开发方法总结, 读下来感觉不错;
