--- a/BasicSkill/composition_principle/计算机组成原理.md
+++ b/BasicSkill/composition_principle/计算机组成原理.md
@@ -30,12 +30,14 @@
 
 ## 计算机的层次与编程语言
 
-* 程序翻译
-  * 常见语言: C/Object-C/Golang;
+* 编译型语言:
+  * 常见语言: C、C++、Object-C、Golang;
   * 经过编译器将高级语言转化生成为计算机实际执行的语言;
-* 程序解析
-  * 常见语言: JavaScript/Python/Php;
+* 解释型语言:
+  * 常见语言: JavaScript、Python、Php、Perl、Lua;
   * 经过解释器(低级语言写的程序)转换为实际执行的语言;
+* 编译 + 解释型语言:
+  * Java、C#、Kotlin;
 
 以 C 语言和 JavaScript 语言为例, C 语言要编写完整, 然后使用编译器编译成一个二进制文件才可以执行, 在编译的过程会把整个程序进行彻底的翻译和优化, 再输出平台可以直接运行的二进制文件。而 JavaScript 是在浏览器 V8 引擎解释执行的, 写好直接就可以运行了, 没有经过编译阶段, 直接是把 JavaScript 代码一句一句解释执行的。
 
@@ -59,10 +61,10 @@
 
 * 为什么电信拉的 100M 光纤, 测试峰值速度只有 12M 每秒。
 
-因为网络常用单位是 Mbps
+因为网络常用单位是 Mbps;
 
 ```
 100M/s === 100Mbit/s === (100/8)B/s
 ```
 
-Read To: 2-8、2-9
+Read To: 3 - 3
