docs: 拼多多内推

--- a/拼多多内推.md
+++ b/拼多多内推.md
@@ -1,6 +1,6 @@
 ### 部门要求
 
-#### 职能介绍
+我们是商家前端部门, 我们的职能大致有以下几个方面:
 
 1、负责拼多多 B 端商户平台、招商平台、开放平台、营销活动、数据中心、售后、推广、客服系统等系统架构与设计工作
 2、规划和设计整个前端系统，包括但不限于 PC 中后台、无线 H5 移动端基础库、框架和关键模块的开发、重构和改进
@@ -19,6 +19,8 @@
 7、掌握集成测试、线上部署、性能监控及调优等技术方案
 8、熟悉前端工程化解决方案 (Webpack/Rollup.js/Gulp) 的使用, 了解 Loader/Plugin 的原理及实现
 
+> 不一定要求满足所有岗位要求, 总之欢迎对前端充满热情与追求、基础扎实的同学!
+
 #### 加分项
 
 1、有大规模前端项目、UI 组件开发、复杂交互、复杂状态系统的开发经验加分
@@ -27,25 +29,25 @@
 4、熟悉电商领域、商户入驻、招商平台、店铺装修等中台开发经验加分
 5、有微信开发经验、移动端 Web 开发经验、Hybrid 开发经验加分
 
-> C 端/A 端前端也可以内推。其它相应产品、技术、测试、算法、前端、客户端、风控、数仓、人事、行政各个方向各条业务线也可以帮推。
+> C 端/A 端等前端岗位也可以帮推。此外其它岗位 JD 可以查阅 [拼多多社招](https://help.pinduoduo.com/home/recruit/), 如果你看到了心仪的岗位, 同样可以告诉我, 我可以帮忙跟进进度, 同时咨询面试反馈。
 
 ### 待遇福利
 
-* 具有竞争力的薪资
-* 提供寝室
-* 提供一日三餐(夜宵)
+* 具有竞争力的薪资;
+* 提供一年住宿(限男生);
+* 提供一日三餐(另有夜宵);
 
 ### 团队生活
 
 * 鼓励技术分享、跨团队技术交流, 每周一次大技术分享会(讨论各种前沿知识/分享项目成果), 并不定时有闪电分享;
 * 和大牛结队编程, 探索各种场景下的最佳实践;(压力通常不是来自业务本身, 而是来自于如何让自己成长;)
 * 团队有高颜值的妹子，写得了代码，开得了玩笑;
-* 定期举办团建, 丰富的团队生活(健身、手游、桌游等);
+* 定期举办团建, 丰富的团队生活(蹦床、手游、桌游等);
 * 团队内部的工程师文化是`以终为始`;
 
 ### 工作地点
 
-上海/深圳(五险一金可以选择其它城市)。
+上海/广州(五险一金也可以选择其它城市比如杭州)。
 
 ### 简历传送门
 
