docs: 拼多多内推

--- a/拼多多内推.md
+++ b/拼多多内推.md
@@ -2,32 +2,32 @@
 
 我们是商家前端部门, 我们的职能大致有以下几个方面:
 
-1、负责拼多多 B 端商户平台、招商平台、开放平台、营销活动、数据中心、售后、推广、客服系统等系统架构与设计工作
-2、规划和设计整个前端系统，包括但不限于 PC 中后台、无线 H5 移动端基础库、框架和关键模块的开发、重构和改进
-3、参与优化前端团队的开发方式和流程、规范，提高团队效率
-4、用打造产品的思维，从业务、设计、架构层面思考如何拆解，更高的复用，更有效的实现
-5、具备产品工程师思维，注重积累与技术创新，与团队一起打造技术产品，提升行业技术影响力
+* 负责拼多多 B 端商户平台、招商平台、开放平台、营销活动、数据中心、售后、推广、客服系统等系统架构与设计工作
+* 规划和设计整个前端系统，包括但不限于 PC 中后台、无线 H5 移动端基础库、框架和关键模块的开发、重构和改进
+* 参与优化前端团队的开发方式和流程、规范，提高团队效率
+* 用打造产品的思维，从业务、设计、架构层面思考如何拆解，更高的复用，更有效的实现
+* 具备产品工程师思维，注重积累与技术创新，与团队一起打造技术产品，提升行业技术影响力
 
 #### 岗位要求
 
-1、本科及以上学历，计算机专业领域基础扎实，2 年即以上 Web 开发经验
-2、熟练使用 ECMAScript5 及 ES2016+ 进行开发
-3、有一定的代码洁癖和良好的文档能力、掌握常规 Lint 类工具及类型检查、持续集成工具的使用
-4、熟练使用业界常用 JavaScript 库或框架 (React 为主/Vue/Angular)，熟悉 (Redux/Mobx/Vuex/Router) 的使用场景及原理
-5、熟练掌握 SASS/PostCss/StyledComponents 的使用, 对页面渲染及样式库的开发有深刻理解
-6、熟悉 HTTP/2 规范与 Web 网络安全
-7、掌握集成测试、线上部署、性能监控及调优等技术方案
-8、熟悉前端工程化解决方案 (Webpack/Rollup.js/Gulp) 的使用, 了解 Loader/Plugin 的原理及实现
+* 本科及以上学历，计算机专业领域基础扎实，2 年即以上 Web 开发经验
+* 熟练使用 ECMAScript5 及 ES2016+ 进行开发
+* 有一定的代码洁癖和良好的文档能力、掌握常规 Lint 类工具及类型检查、持续集成工具的使用
+* 熟练使用业界常用 JavaScript 库或框架 (React 为主/Vue/Angular)，熟悉 (Redux/Mobx/Vuex/Router) 的使用场景及原理
+* 熟练掌握 SASS/PostCss/StyledComponents 的使用, 对页面渲染及样式库的开发有深刻理解
+* 熟悉 HTTP/2 规范与 Web 网络安全
+* 掌握集成测试、线上部署、性能监控及调优等技术方案
+* 熟悉前端工程化解决方案 (Webpack/Rollup.js/Gulp) 的使用, 了解 Loader/Plugin 的原理及实现
 
 > 不一定要求满足所有岗位要求, 总之欢迎对前端充满热情与追求、基础扎实的同学!
 
 #### 加分项
 
-1、有大规模前端项目、UI 组件开发、复杂交互、复杂状态系统的开发经验加分
-2、掌握不止一种开发语言，有 Node.js/Java/TypeScript/客户端开发经验加分
-3、熟练使用函数式编程风格或面向对象编程风格开发加分
-4、熟悉电商领域、商户入驻、招商平台、店铺装修等中台开发经验加分
-5、有微信开发经验、移动端 Web 开发经验、Hybrid 开发经验加分
+* 有大规模前端项目、UI 组件开发、复杂交互、复杂状态系统的开发经验加分
+* 掌握不止一种开发语言，有 Node.js/Java/TypeScript/客户端开发经验加分
+* 熟练使用函数式编程风格或面向对象编程风格开发加分
+* 熟悉电商领域、商户入驻、招商平台、店铺装修等中台开发经验加分
+* 有微信开发经验、移动端 Web 开发经验、Hybrid 开发经验加分
 
 > C 端/A 端等前端岗位也可以帮推。此外其它岗位 JD 可以查阅 [拼多多社招](https://help.pinduoduo.com/home/recruit/), 如果你看到了心仪的岗位, 同样可以告诉我, 我可以帮忙跟进进度, 同时咨询面试反馈。
 
