docs: 拼多多内推

--- a/拼多多内推.md
+++ b/拼多多内推.md
@@ -51,4 +51,5 @@
 
 ### 简历传送门
 
-`echo bXVqdWVAcGluZHVvZHVvLmNvbQo= | base64 -D`
+* 邮箱: `echo bXVqdWVAcGluZHVvZHVvLmNvbQo= | base64 -D`
+* 微信: `echo YTMyODM3NTc5NQo= | base64 -D`
