lc: think in 144

--- a/BasicSkill/algorithm/二叉树.md
+++ b/BasicSkill/algorithm/二叉树.md
@@ -5,11 +5,8 @@
 这幅图中有如下概念:
 
 * 根节点: 一棵树最顶部的节点
-
 * 内部节点: 在它上面还有其它内部节点或者叶节点的节点
-
 * 叶节点: 处于一棵树根部的节点
-
 * 子树: 由树中的内部节点和叶节点组成
 
 此外这棵树是二叉树（树中最多有两个分支）, 同时它也是二叉搜索树（左侧子节点的数字小于父节点, 右侧子节点的数字大于父节点）
@@ -193,11 +190,11 @@ tree.insert(6)
 
 ### 三种遍历方式的不同
 
-* 中序遍历: 可用于二叉搜索树的排序
+* 中序遍历: 可用于`二叉搜索树的排序`
 
 ![](http://with.muyunyun.cn/ceeb68f801304f9910073708dd35ae64.jpg-300)
 
-* 先序遍历: 可用于打印结构化的文档
+* 先序遍历: 可用于`打印结构化的文档`
 
 ![](http://with.muyunyun.cn/65df3e9414f594107d95127f8ab5a9a1.jpg-300)
 
